# traxerax-lite

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-lock.txt  requirements.txt
config/: config.yaml  default.json  default.yaml
docs/: architecture.md
sample_logs/: auth.log.sample  fail2ban.log.sample  mail.log.sample  nginx-access.log.sample
src/traxerax_lite/: __init__.py  baseline.py  cli.py  collector.py  config.py  detector.py  hunt.py  incidents.py  main.py  models.py  parser.py  query.py  report_queries.py  reporter.py  storage.py
tests/: test_detector.py  test_hunt.py  test_main.py  test_parser.py  test_query.py  test_report_queries.py  test_reporter.py  test_storage.py
