[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "traxerax-lite"
version = "0.1.0"
description = "Lightweight Linux security triage tool"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PyYAML>=6.0.3",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
